# vpn_website_test

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  forms.py  models.py
app/templates/: base.html
app/templates/views/: dashboard.html  index.html  websites.html
app/templates/views/auth/: account.html  login.html  register.html
app/views/: __init__.py  auth.py  main.py
