[tool.poetry]
name = "vpn-website-test"
version = "0.1.0"
description = ""
authors = ["skorodenko <72010957+skorodenko@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.0"
requests = "^2.31.0"
flask-sqlalchemy = "^3.1.1"
flask-login = "^0.6.3"
flask-bcrypt = "^1.0.1"
psycopg2-binary = "^2.9.9"
wtforms = "^3.1.1"
beautifulsoup4 = "^4.12.2"
lxml = "^4.9.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
